--- a/style.css
+++ b/style.css
@@ -104,12 +104,18 @@ a{
 
 .section2{
     align-items: center;
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
 }
 
 .section2 .container{
     display: flex;
     flex-direction: row;
     gap: 2em;
+    font-size: 16px;
+    font-weight: normal;
+    color:dimgray;
 }
 
 .img-container{
